# CriptoMetrics

./: README.md  pyproject.toml
criptometrics/extract/: extract.py
criptometrics/load/: load.py
criptometrics/pipeline/: main.py
criptometrics/transform/: __init__.py  transform.py
criptometrics/utils/: btc_coinbase_api.json
