[tool.poetry]
name = "criptometrics"
version = "0.1.0"
description = ""
authors = ["Rafael Alvarenga <devrafaelalvarenga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tinydb = "^4.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
